Layout Bugs gefixt

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ header nav ul li div {
 	line-height: 23px;
 }
 
+#content div.halfwidth {
+	width: 50%;
+}
+
 #content #map_small {
 	width: 600px;
 	height: 350px;
